--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@
     font-weight: 800;
     padding: 15px;
     display: grid;
-    grid-template-rows: minmax(40px, 60px) minmax(240px, 360px) minmax(120px, 180px);
+    grid-template-rows: minmax(40px, 60px) minmax(240px, 260px) minmax(120px, 180px);
+    grid-template-columns: auto;
     align-items: start;
 } 
 .sidebar
@@ -64,12 +65,12 @@
     background-color: var(--bg);
     
 }
-
 .searchbar {
+    padding: 15px;
     background-color: var(--bg-card);
     display: grid;
     grid-template-columns: auto repeat(2, 30px) 150px;
-    grid-template-rows: 40px;
+    grid-template-rows: 30px;
     gap: 15px;
 }
 
@@ -94,19 +95,23 @@
     font-weight: 800;
 }
 .search {
-    place-self: center;
+    justify-self: start;
 }
 
 .nav {
+    padding: 15px;
     background-color: var(--bg-card);
     filter: var(--drop-shadow);
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 80px;
+    grid-template-rows: 40px;
     align-items: center;
+    grid-template-areas: 
+    "user buttons"
 }
 
 .user {
+    justify-self: start;
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 10px 40px;
@@ -114,6 +119,7 @@
     "user-icon hi"
     "user-icon user-name";
     column-gap: 15px;
+
 }
 .user-icon {
     grid-area: user-icon;
@@ -158,6 +164,7 @@ button {
 .content {
     display: grid;
     grid-template-columns: 3fr 1fr;
+    grid-template-rows: auto;
     grid-template-areas: "projects aside";
     padding: 15px;
     gap: 15px;
@@ -189,7 +196,7 @@ h1 {
     display: grid;
     padding: 15px;
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 150px 50px;
+    grid-template-rows: 40px 120px 40px;
     grid-template-areas: "card-title"
     "card-text"
     "card-icons";
@@ -205,15 +212,15 @@ h1 {
 }
 .card-icons{
  justify-self: end;
+ font-size: 20px;
 }
 
 
 .aside {
     grid-area: aside;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto auto;
     gap: 15px;
-
 }
 
 .announcement-cards,
